Do I need to set the branch?
Signed-off-by: Dirk Hohndel <dirk@hohndel.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ deploy:
   skip_cleanup: true
   on:
     repo: dirkhh/testrepo
+    branch: master
 
 after_success:
     - ls -lh HelloWorld*Appimage
