--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_success:
     - echo "Travis claims our branch is" $TRAVIS_BRANCH
     - if [ ! -z $TRAVIS_BRANCH ] && [ "$TRAVIS_BRANCH" != "master" ] ; then export UPLOADTOOL_SUFFIX=$TRAVIS_BRANCH ; fi
     - wget -c https://github.com/dirkhh/uploadtool/raw/master/upload.sh
-    - bash -x ./upload.sh HelloWorld*.AppImage HelloWorld*.AppImage.zsync
+    - bash -x ./upload.sh HelloWorld*.AppImage
 
 deploy:
   provider: releases
