--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,7 @@ after_success:
     - if [ ! -z $TRAVIS_BRANCH ] && [ "$TRAVIS_BRANCH" != "master" ] ; then export UPLOADTOOL_SUFFIX=$TRAVIS_BRANCH ; fi
     - wget -c https://github.com/dirkhh/uploadtool/raw/master/upload.sh
     - bash -x ./upload.sh HelloWorld*.AppImage
-    - RELEASE_NAME="continuous"
-    - RELEASE_TITLE="Release for continuous"
-    - BODY="Testin 1-2-3"
-    - release_id=${curl https://api.github.com/repos/Subsurface-divelog/subsurface/releases/tags/${RELEASE_NAME} | grep id: |grep "\"id\":" | head -n 1 | tr -s " " | cut -f 3 -d" " | cut -f 1 -d ",")
-    - release_infos=$(curl -H "Authorization: token ${GITHUB_TOKEN}" --request PATCH \
-       --data '{"tag_name": "'"$RELEASE_NAME"'","name": "'"$RELEASE_TITLE"'","body": "'"$BODY"'"}' "https://api.github.com/repos/Subsurface-divelog/subsurface/releases/${release_id}")
+    - bash -x ./after.sh
 
 
 branches:
